<resources>
    <string name="app_name">Concert Tickets</string>
    <string name="concert_tickets">Concert Tickets</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="for_you">For you</string>
    <string name="upcoming">Upcoming</string>
    <string name="expired">Expired</string>
    <string name="non_discount">Non - Discount</string>
    <string name="discount">Discount</string>
    <string name="no_tickets">No non-discounted tickets left</string>
    <string name="no_tickets_discount">No discounted tickets left</string>
    <string name="edit">Edit</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

    <string name="description">Description:</string>
    <string name="name">Name:</string>
    <string name="place">Place:</string>
    <string name="date">Date:</string>
    <string name="quantity">Quantity:</string>
    <string name="discount_">Discount:</string>
    <string name="final_price">Final price:</string>
    <string name="price">Price:</string>
    <string name="discount_value">Discount value:</string>
    <string name="discount_quantity">Discount quantity:</string>
    <string name="pick_date">Click to set a date</string>
    <string name="no_tickets_alert">There are no concert tickets.</string>

    <string name="alert_empty_name">Name field is empty</string>
    <string name="alert_empty_place">Place field is empty</string>

    <string name="alert_empty_date">Date field is empty</string>

    <string name="alert_empty_price">Price field is empty</string>
    <string name="alert_price_negative">Price must be more than 0</string>

    <string name="alert_empty_quantity">Quantity field is empty</string>
    <string name="alert_quantity_negative">Quantity must be more than 0</string>

    <string name="alert_empty_discount_value">Discount value field is empty</string>
    <string name="alert_discount_value">Discount value must be less than 100</string>
    <string name="alert_discount_value_negative">Discount value must be more than 0</string>

    <string name="alert_empty_discount_quantity">Discount quantity field is empty</string>
    <string name="alert_discount_quantity_negative">Discount quantity must be more than 0</string>
    <string name="alert_discount_quantity">Discount quantity must be less or equal to total quantity</string>

    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
</resources>