<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false">

            <ImageView
                android:id="@+id/create_edit_img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"
                tools:layout_editor_absoluteX="0dp"
                tools:src="@drawable/hanszimmer" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_edit_img">

                <TextView
                    android:id="@+id/create_edit_name_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/name"
                    android:textSize="13sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_edit_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/create_edit_description_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/description"
                    android:textSize="13sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textMultiLine"
                    app:counterEnabled="true"
                    app:counterMaxLength="200">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_edit_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="200" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/create_edit_place_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/place"
                    android:textSize="13sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_edit_place"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/create_edit_date_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/date"
                    android:textSize="13sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_edit_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:lines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/create_edit_price_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/price"
                    android:textSize="13sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_edit_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:lines="1"
                        android:maxLength="6" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/create_edit_quantity_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/quantity"
                    android:textSize="13sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_edit_quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:lines="1"
                        android:maxLength="6" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>