<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/toolbar_divider"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="40dp"
                    android:background="@color/toolbar_divider"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/home_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:paddingTop="16dp"
                    android:paddingBottom="32dp"
                    tools:context=".modules.concert_tickets.components.home.HomeFragment">

                    <TextView
                        android:id="@+id/discount_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/for_you"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/discount_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:paddingStart="16dp"
                        android:paddingEnd="0dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
                        app:layout_constraintTop_toBottomOf="@id/discount_tv"
                        tools:itemCount="1" />

                    <TextView
                        android:id="@+id/upcoming_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/upcoming"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/discount_recycler" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/upcoming_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:padding="8dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="0dp"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
                        app:layout_constraintTop_toBottomOf="@id/upcoming_tv"
                        tools:itemCount="1" />

                    <TextView
                        android:id="@+id/expired_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/expired"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/upcoming_recycler" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/expired_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:paddingStart="16dp"
                        android:paddingEnd="0dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
                        app:layout_constraintTop_toBottomOf="@id/expired_tv"
                        tools:itemCount="1" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/home_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/home_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/home_admin_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:elevation="0dp"
            android:minHeight="48dp"
            android:scaleType="center"
            android:src="@drawable/admin"
            app:backgroundTint="@color/app_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@android:color/white"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>